--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -185,8 +185,8 @@ BACK_BUTTON : "ʙᴀᴄᴋ"
 NEXT_PAGE: ">"
 BACK_PAGE: "<"
 
-S_B_1 : "ᴧᴅᴅ ϻᴇ ʙᴧʙʏ"
-S_B_2 : "🌪️ sᴜᴘᴘᴏꝛᴛ 🌪️"
+S_B_1 : "ᴧᴅᴅ ϻᴇ"
+S_B_2 : "sᴜᴘᴘᴏꝛᴛ"
 S_B_3 : "ᴧᴅᴅ ϻᴇ ʙᴧʙʏ"
 S_B_4 : "ʜᴇʟᴘ ᴧɴᴅ ᴄσϻϻᴧɴᴅѕ"
 S_B_5 : "𝐒ᴏᴜʀᴄᴇ"
